z-index image fixes, added changelog

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,8 @@ body {
   border-width: 3px;
   color: white;
 }
+
+.temporary-bounce {
+  -webkit-animation-iteration-count: 2;
+  animation-iteration-count: 2;
+}
